# mcp-crawl4ai-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: testing-style-guide.mdc
knowledge_graphs/: ai_hallucination_detection_plan.md  ai_hallucination_detector.py  ai_script_analyzer.py  hallucination_reporter.py  knowledge_graph_validator.py  llm_code_explorer.py  mcp_knowledge_graph_tools_implementation_plan.md  parse_repo_into_neo4j.py  query_knowledge_graph.py  test_script.py  test_script_hallucination_report.json  test_script_hallucination_report.md
src/: crawl4ai_mcp.py  utils.py
src/utils/: code_extraction.py  document_storage.py  documentation.py  embeddings.py  feature_flags.py  openai_client.py  query_preprocessing.py  repository_metadata.py  supabase_client.py  text_processing.py
tests/: conftest.py  test_documentation_processing.py
tests/e2e/: test_environment_check.py  test_parse_github_repository_e2e.py  test_query_preprocessing_e2e.py
tests/integration/: test_advanced_rag_integration.py  test_mcp_tool_integration.py  test_query_preprocessing_integration.py  test_repository_documentation_integration.py
tests/support/: database_helpers.py  mcp_client.py
tests/support/builders/: __init__.py  repository_builder.py
tests/support/fixtures/: README.md  __init__.py  data_fixtures.py  environment_fixtures.py  mock_fixtures.py  repository_fixtures.py
tests/support/helpers/: __init__.py  assertion_helpers.py  environment_helpers.py
tests/support/mocking/: __init__.py  git_operations.py  neo4j_operations.py  openai_operations.py  supabase_operations.py
tests/unit/: conftest.py  test_documentation_processing.py
tests/unit/utils/: __init__.py  test_documentation.py  test_query_preprocessing.py  test_repository_metadata.py  test_supabase_client.py  test_text_processing.py
